@@ -200,9 +200,9 @@ and control the area.\n\r\
 Once a flag has been laid down, the clan whose flag it is may LOOK at the flag \
 at any time to see the status of their conquest; i.e. the number of control points \
 they have scored, and how many they must score to complete the conquest.  A \
-control point is scored whenever a resident intelligent mob of that area is killed, \
-forced (via charm or other methods) to follow a member of the conquering clan, \
-or (in the case of a Theocracy) converted to the faith. \
+control point is scored whenever a resident, intelligent, level-parity mob of \
+that area  killed, forced (via charm or other methods) to follow a member \
+of the conquering clan, or (in the case of a Theocracy) converted to the faith. \
 Control points awarded are equal to the level of the intelligent mob killed, charmed, or converted. \
 Control points will also fade over time, to reflect a restoration of order in the \
 area.\n\r\
