@@ -94,111 +94,17 @@
 	<TR>
 		<TD WIDTH=100% COLSPAN=17>
 			<SELECT NAME=DAYS ONCHANGE="Clicked('/grinder/stats.cmvp');">
-			<OPTION VALUE=1>1
-			<OPTION VALUE=2>2
-			<OPTION VALUE=3>3
-			<OPTION VALUE=4>4
-			<OPTION VALUE=5>5
-			<OPTION VALUE=6>6
-			<OPTION VALUE=7>7
-			<OPTION VALUE=8>8
-			<OPTION VALUE=9>9
-			<OPTION VALUE=10>10
-			<OPTION VALUE=11>11
-			<OPTION VALUE=12>12
-			<OPTION VALUE=13>13
-			<OPTION VALUE=14>14
-			<OPTION VALUE=15>15
-			<OPTION VALUE=16>16
-			<OPTION VALUE=17>17
-			<OPTION VALUE=18>18
-			<OPTION VALUE=19>19
-			<OPTION VALUE=20>20
-			<OPTION VALUE=21>21
-			<OPTION VALUE=22>22
-			<OPTION VALUE=23>23
-			<OPTION VALUE=24>24
-			<OPTION VALUE=25>25
-			<OPTION VALUE=26>26
-			<OPTION VALUE=27>27
-			<OPTION VALUE=28>28
-			<OPTION VALUE=29>29
-			<OPTION VALUE=30>30
-			<OPTION VALUE=31>31
-			<OPTION VALUE=32>32
-			<OPTION VALUE=33>33
-			<OPTION VALUE=34>34
-			<OPTION VALUE=35>35
-			<OPTION VALUE=36>36
-			<OPTION VALUE=37>37
-			<OPTION VALUE=38>38
-			<OPTION VALUE=39>39
-			<OPTION VALUE=40>40
-			<OPTION VALUE=41>41
-			<OPTION VALUE=42>42
-			<OPTION VALUE=43>43
-			<OPTION VALUE=44>44
-			<OPTION VALUE=45>45
-			<OPTION VALUE=46>46
-			<OPTION VALUE=47>47
-			<OPTION VALUE=48>48
-			<OPTION VALUE=49>49
-			<OPTION VALUE=50>40
-			<OPTION VALUE=51>51
-			<OPTION VALUE=52>52
-			<OPTION VALUE=53>53
-			<OPTION VALUE=54>54
-			<OPTION VALUE=55>55
-			<OPTION VALUE=56>56
-			<OPTION VALUE=57>57
-			<OPTION VALUE=58>58
-			<OPTION VALUE=59>59
-			<OPTION VALUE=60>60
-			<OPTION VALUE=61>61
-			<OPTION VALUE=62>62
-			<OPTION VALUE=63>63
-			<OPTION VALUE=64>64
-			<OPTION VALUE=65>65
-			<OPTION VALUE=66>66
-			<OPTION VALUE=67>67
-			<OPTION VALUE=68>68
-			<OPTION VALUE=69>69
-			<OPTION VALUE=70>70
-			<OPTION VALUE=71>71
-			<OPTION VALUE=72>72
-			<OPTION VALUE=73>73
-			<OPTION VALUE=74>74
-			<OPTION VALUE=75>75
-			<OPTION VALUE=76>76
-			<OPTION VALUE=77>77
-			<OPTION VALUE=78>78
-			<OPTION VALUE=79>79
-			<OPTION VALUE=80>80
-			<OPTION VALUE=81>81
-			<OPTION VALUE=82>82
-			<OPTION VALUE=83>83
-			<OPTION VALUE=84>84
-			<OPTION VALUE=85>85
-			<OPTION VALUE=86>86
-			<OPTION VALUE=87>87
-			<OPTION VALUE=88>88
-			<OPTION VALUE=89>89
-			<OPTION VALUE=90>90
-			<OPTION VALUE=91>91
-			<OPTION VALUE=92>92
-			<OPTION VALUE=93>93
-			<OPTION VALUE=94>94
-			<OPTION VALUE=95>95
-			<OPTION VALUE=96>96
-			<OPTION VALUE=97>97
-			<OPTION VALUE=98>98
-			<OPTION VALUE=99>99
+			@for?DAYNUM=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99@
+				<OPTION VALUE=@RequestParameter?DAYNUM@
+				@if?CheckReqParm?DAYS=@@RequestParameter?DAYNUM@@ @ SELECTED@endif@
+				>@RequestParameter?DAYNUM@
+			@next@
 			</SELECT>
 			<SELECT NAME=SCALE ONCHANGE="Clicked('/grinder/stats.cmvp');">
-			<OPTION VALUE=1 SELECTED>Days
-			<OPTION VALUE=7>Weeks
-			<OPTION VALUE=30>Months
-			<OPTION VALUE=365>Years
+			<OPTION VALUE=1 @if?CheckReqParm?SCALE=1@ SELECTED@endif@>Days
+			<OPTION VALUE=7 @if?CheckReqParm?SCALE=7@ SELECTED@endif@>Weeks
+			<OPTION VALUE=30 @if?CheckReqParm?SCALE=30@ SELECTED@endif@>Months
+			<OPTION VALUE=365 @if?CheckReqParm?SCALE=365@ SELECTED@endif@>Years
 			</SELECT>
 			<INPUT TYPE=RADIO NAME=RPTTYP ID=RPTTYP @if?CheckReqParm?QUESTRPT=@ @if?CheckReqParm?SKILLRPT=USAGERPT@checked@endif@ @if?CheckReqParm?SKILLRPT=@checked@endif@ @endif@ VALUE=USAGERPT ONCLICK="ClickedBox('USAGERPT','','','');"><FONT COLOR=WHITE>Usage Report</FONT>
 			<INPUT TYPE=RADIO NAME=RPTTYP ID=RPTTYP @if?CheckReqParm?SKILLRPT=SKILLRPT@checked@endif@ VALUE=SKILLRPT ONCLICK="ClickedBox('SKILLRPT','','','','','');"><FONT COLOR=WHITE>Skills Report</FONT>
@@ -214,13 +120,13 @@
 			@if?CheckReqParm?!AREARPT=AREARPT&!QUESTRPT=QUESTRPT&!SOCRPT=SOCRPT&!CMDRPT=CMDRPT&!CRIMERPT=CRIMERPT&!SKILLRPT=SKILLRPT@
 			<FONT COLOR=WHITE>Filter:</FONT>
 			<SELECT NAME=CODEPART ONCHANGE="SelCombo(document.CONTROL.CODE,'*'); Clicked('/grinder/stats.cmvp');">
-			<OPTION VALUE="BASECLASS">chars of class type ...
-			<OPTION VALUE="CLASS">chars of class...
-			<OPTION VALUE="RACE">chars of race...
-			<OPTION VALUE="LEVEL">chars of level...
-			<OPTION VALUE="GENDER">chars of gender...
-			<OPTION VALUE="CLASS">chars of race...
-			<OPTION VALUE="AREAS">chars in area...
+			<OPTION VALUE="BASECLASS" @if?CheckReqParm?CODEPART=BASECLASS@ SELECTED@endif@>chars of class type ...
+			<OPTION VALUE="CLASS" @if?CheckReqParm?CODEPART=CLASS@ SELECTED@endif@>chars of class...
+			<OPTION VALUE="RACE" @if?CheckReqParm?CODEPART=RACE@ SELECTED@endif@>chars of race...
+			<OPTION VALUE="LEVEL" @if?CheckReqParm?CODEPART=LEVEL@ SELECTED@endif@>chars of level...
+			<OPTION VALUE="GENDER" @if?CheckReqParm?CODEPART=GENDER@ SELECTED@endif@>chars of gender...
+			<OPTION VALUE="CLASS" @if?CheckReqParm?CODEPART=CLASS@ SELECTED@endif@>chars of race...
+			<OPTION VALUE="AREAS" @if?CheckReqParm?CODEPART=AREAS@ SELECTED@endif@>chars in area...
 			</SELECT>
 			<SELECT NAME=CODE ONCHANGE="Clicked('/grinder/stats.cmvp');">
 			<OPTION VALUE="*">ALL
@@ -228,7 +134,7 @@
 				@BaseCharClassNext?RESET@
 				@loop@
 				@BaseCharClassNext@
-				<OPTION VALUE="B@BaseCharClassName@">@BaseCharClassName@
+				<OPTION VALUE="B@BaseCharClassName@" @if?CheckReqParm?CODE=B@@BaseCharClassName@@ @ SELECTED@endif@>@BaseCharClassName@
 				@back@
 				@BaseCharClassNext?RESET@
 			@endif@
@@ -236,7 +142,7 @@
 				@BaseCharClassNext?RESET@
 				@loop@
 				@BaseCharClassNext@
-				<OPTION VALUE="B@BaseCharClassName@">@BaseCharClassName@
+				<OPTION VALUE="B@BaseCharClassName@" @if?CheckReqParm?CODE=B@@BaseCharClassName@@ @ SELECTED@endif@>@BaseCharClassName@
 				@back@
 				@BaseCharClassNext?RESET@
 			@endif@
@@ -244,7 +150,7 @@
 				@CharClassNext?RESET@
 				@loop@
 				@CharClassNext@
-				<OPTION VALUE="C@CharClassID@">@CharClassName@
+				<OPTION VALUE="C@CharClassID@" @if?CheckReqParm?CODE=C@@CharClassID@@ @ SELECTED@endif@>@CharClassName@
 				@back@
 				@CharClassNext?RESET@
 			@endif@
@@ -252,7 +158,7 @@
 				@RaceNext?RESET@
 				@loop@
 				@RaceNext@
-				<OPTION VALUE="R@RaceID@">@RaceName@
+				<OPTION VALUE="R@RaceID@"@if?CheckReqParm?CODE=R@@RaceID@@ @ SELECTED@endif@>@RaceName@
 				@back@
 				@RaceNext?RESET@
 			@endif@
@@ -260,117 +166,21 @@
 				@AreaNext?RESET@
 				@loop@
 				@AreaNext@
-				<OPTION VALUE="X@AreaName?UNDERSCORE&UPPERCASE@">@AreaName@
+				<OPTION VALUE="X@AreaName?UNDERSCORE&UPPERCASE@"@if?CheckReqParm?CODE=X@@AreaName?UNDERSCORE&UPPERCASE@@ @ SELECTED@endif@>@AreaName@
 				@back@
 				@AreaNext?RESET@
 			@endif@
 			@if?CheckReqParm?CODEPART=GENDER@
-				<OPTION VALUE="GM">Male
-				<OPTION VALUE="GF">Female
-				<OPTION VALUE="GN">Neuter
+				<OPTION VALUE="GM" @if?CheckReqParm?CODE=GM@ SELECTED@endif@>Male
+				<OPTION VALUE="GF" @if?CheckReqParm?CODE=GF@ SELECTED@endif@>Female
+				<OPTION VALUE="GN" @if?CheckReqParm?CODE=GN@ SELECTED@endif@>Neuter
 			@endif@
 			@if?CheckReqParm?CODEPART=LEVEL@
-				<OPTION VALUE="L1">1
-				<OPTION VALUE="L2">2
-				<OPTION VALUE="L3">3
-				<OPTION VALUE="L4">4
-				<OPTION VALUE="L5">5
-				<OPTION VALUE="L6">6
-				<OPTION VALUE="L7">7
-				<OPTION VALUE="L8">8
-				<OPTION VALUE="L9">9
-				<OPTION VALUE="L10">10
-				<OPTION VALUE="L11">11
-				<OPTION VALUE="L12">12
-				<OPTION VALUE="L13">13
-				<OPTION VALUE="L14">14
-				<OPTION VALUE="L15">15
-				<OPTION VALUE="L16">16
-				<OPTION VALUE="L17">17
-				<OPTION VALUE="L18">18
-				<OPTION VALUE="L19">19
-				<OPTION VALUE="L20">20
-				<OPTION VALUE="L21">21
-				<OPTION VALUE="L22">22
-				<OPTION VALUE="L23">23
-				<OPTION VALUE="L24">24
-				<OPTION VALUE="L25">25
-				<OPTION VALUE="L26">26
-				<OPTION VALUE="L27">27
-				<OPTION VALUE="L28">28
-				<OPTION VALUE="L29">29
-				<OPTION VALUE="L30">30
-				<OPTION VALUE="L31">31
-				<OPTION VALUE="L32">32
-				<OPTION VALUE="L33">33
-				<OPTION VALUE="L34">34
-				<OPTION VALUE="L35">35
-				<OPTION VALUE="L36">36
-				<OPTION VALUE="L37">37
-				<OPTION VALUE="L38">38
-				<OPTION VALUE="L39">39
-				<OPTION VALUE="L40">40
-				<OPTION VALUE="L41">41
-				<OPTION VALUE="L42">42
-				<OPTION VALUE="L43">43
-				<OPTION VALUE="L44">44
-				<OPTION VALUE="L45">45
-				<OPTION VALUE="L46">46
-				<OPTION VALUE="L47">47
-				<OPTION VALUE="L48">48
-				<OPTION VALUE="L49">49
-				<OPTION VALUE="L50">40
-				<OPTION VALUE="L51">51
-				<OPTION VALUE="L52">52
-				<OPTION VALUE="L53">53
-				<OPTION VALUE="L54">54
-				<OPTION VALUE="L55">55
-				<OPTION VALUE="L56">56
-				<OPTION VALUE="L57">57
-				<OPTION VALUE="L58">58
-				<OPTION VALUE="L59">59
-				<OPTION VALUE="L60">60
-				<OPTION VALUE="L61">61
-				<OPTION VALUE="L62">62
-				<OPTION VALUE="L63">63
-				<OPTION VALUE="L64">64
-				<OPTION VALUE="L65">65
-				<OPTION VALUE="L66">66
-				<OPTION VALUE="L67">67
-				<OPTION VALUE="L68">68
-				<OPTION VALUE="L69">69
-				<OPTION VALUE="L70">70
-				<OPTION VALUE="L71">71
-				<OPTION VALUE="L72">72
-				<OPTION VALUE="L73">73
-				<OPTION VALUE="L74">74
-				<OPTION VALUE="L75">75
-				<OPTION VALUE="L76">76
-				<OPTION VALUE="L77">77
-				<OPTION VALUE="L78">78
-				<OPTION VALUE="L79">79
-				<OPTION VALUE="L80">80
-				<OPTION VALUE="L81">81
-				<OPTION VALUE="L82">82
-				<OPTION VALUE="L83">83
-				<OPTION VALUE="L84">84
-				<OPTION VALUE="L85">85
-				<OPTION VALUE="L86">86
-				<OPTION VALUE="L87">87
-				<OPTION VALUE="L88">88
-				<OPTION VALUE="L89">89
-				<OPTION VALUE="L90">90
-				<OPTION VALUE="L91">91
-				<OPTION VALUE="L92">92
-				<OPTION VALUE="L93">93
-				<OPTION VALUE="L94">94
-				<OPTION VALUE="L95">95
-				<OPTION VALUE="L96">96
-				<OPTION VALUE="L97">97
-				<OPTION VALUE="L98">98
-				<OPTION VALUE="L99">99
-				<OPTION VALUE="L100">100
-				<OPTION VALUE="L101">101
+				@for?DAYNUM=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101@
+					<OPTION VALUE="L@RequestParameter?DAYNUM@"
+					@if?CheckReqParm?CODE=L@@RequestParameter?DAYNUM@@ @ SELECTED@endif@
+					>@RequestParameter?DAYNUM@
+				@next@
 			@endif@
 			</SELECT>
 			<SCRIPT LANGUAGE=JavaScript>
